	PR debug/45500 	* dwarf2out.c (rtl_for_decl_init): Give up for all generic vectors, 	not just generic vectors with BLKmode.

* gcc.target/i386/pr45500.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@163803 138bc75d-0d04-0410-961f-82ee72b054a4